Added webpage for adding Pages to database and functionality

--- a/src/main/resources/templates/GetPage.html
+++ b/src/main/resources/templates/GetPage.html
@@ -9,5 +9,9 @@
 </head>
 <body>
 THE PAGE PAGE HAS BEEN GOT
+<form method="post">
+    <input type="text" name="page"></input>
+    <button type="submit">Submit</button>
+</form>
 </body>
 </html>
