--- a/src/main/resources/templates/PostNotebook.html
+++ b/src/main/resources/templates/PostNotebook.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 posting notebook here
-<p th:text="${'notebook added: ' + notebook}"
+<p th:text="${'notebook added: ' + notebook}"></p>
 </body>
 </html>
