--- a/src/main/resources/templates/PostPage.html
+++ b/src/main/resources/templates/PostPage.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Post our notebook</title>
+    <title>Post Page</title>
 </head>
 <body>
-posting notebook here
-<p th:text="${'notebook added: ' + notebook}"
+posting page here
+<p th:text="${'page added: ' + page}"></p>
 </body>
 </html>
