fixed goofy findByName bug (we added notebook to model twice, dont do that!)

--- a/src/main/resources/templates/GetNotebook.html
+++ b/src/main/resources/templates/GetNotebook.html
@@ -10,7 +10,7 @@
 <body>
 poop pee poop
 <form method="post">
-    <input type="text" name="notebook"></input>
+    <input type="text" name="notebook2"></input>
     <button type="submit">Submit</button>
 </form>
 
