project cleanup, revert to before security was added

--- a/src/main/resources/templates/GetNotebook.html
+++ b/src/main/resources/templates/GetNotebook.html
@@ -8,7 +8,7 @@
     <title>Notebooks</title>
 </head>
 <body>
-poop pee poop
+<p>Add a notebook </p>
 <form method="post">
     <input type="text" name="notebook2"></input>
     <button type="submit">Submit</button>
