changed user notebook to get user notebook from notebook service instead of url params

--- a/src/main/resources/templates/user_notebook.html
+++ b/src/main/resources/templates/user_notebook.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <p th:text="${'Notebook: ' + notebook_identifier}"></p>
+    <p th:text="${'Notebook: ' + user_notebook.notebookName}"></p>
     <p>we should eventually get dynamic user notebooks at this page for each individual notebook</p>
 </body>
 </html>
