tried out @ModelAttribute annotation on postHome controller

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <body>
     <p> Add a notebook here</p>
     <form method="post">
-        <input type="text" name="notebook"></input>
+        <input type="text" name="notebookName"></input>
         <button type="submit">Submit</button>
     </form>
     <p> Notebooks:</p>
