added limit to html form input for textContents field to 8000 to safely store in varchar (max is 8000) for db

--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -18,7 +18,7 @@
 <p>add notes below</p>
 
 <form method="post">
-    <input th:value="${user_page.textContents}" id="page_contents" type="text" name="page_text_content">
+    <input th:value="${user_page.textContents}" id="page_contents" type="text" name="page_text_content" maxlength="8000">
     <button type="submit">Submit</button>
 </form>
 
