added links to home page from other pages

--- a/src/main/resources/templates/user_notebook.html
+++ b/src/main/resources/templates/user_notebook.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <a th:href = "@{/home}">Go To Home</a>
     <p th:text="${'Notebook: ' + user_notebook.notebookName}"></p>
     <h3>Pages:</h3>
 
