--- a/src/main/resources/templates/user_notebook.html
+++ b/src/main/resources/templates/user_notebook.html
@@ -15,7 +15,7 @@
 
     <th:block th:each="page : ${user_notebook.pages}">
         <p th:text="${page.name}"> </p>
-        <a th:href="@{/user_page/__${page.id}__}">go to page</a>
+        <a th:href="@{/__${user_notebook.uuid}__/__${page.uuid}__}">go to page</a>
     </th:block>
     <br>
     <p>Add a page </p>
