--- a/src/main/resources/templates/user_page.html
+++ b/src/main/resources/templates/user_page.html
@@ -11,6 +11,7 @@
 
     <a th:href = "@{/home}">Go To Home</a>
     <p th:text="${'Page name: ' + user_page.name}"></p>
+    <a th:href = "@{/user_notebook/__${user_page.notebook.uuid}__}">Back to Notebook</a>
     <br>
     <p>Edit page below:</p>
     <a th:href="@{/__${user_page.notebook.uuid}__/edit/__${user_page.uuid}__}">Edit This Page</a>
