added @NotBlank javax validation for entity name fields

--- a/src/main/resources/templates/user_notebook.html
+++ b/src/main/resources/templates/user_notebook.html
@@ -20,7 +20,7 @@
     <br>
     <p>Add a page </p>
     <form method="post">
-        <input type="text" name="page_name"></input>
+        <input type="text" name="page_name" required></input>
         <button type="submit">Submit</button>
     </form>
 </body>
